--- a/option.css
+++ b/option.css
@@ -9,21 +9,64 @@
 	font-size: 19px;
 }
 
-.titreFiltre{
-	text-align: center;
-	margin-bottom: 10px;
-	font-weight: bold;
-	font-size:1.3em;
-	cursor:pointer;
-}
-
 .filtre{
 	position:relative;
 	width : 605px;
-	margin: 15px;
-	padding: 10px;
-	/* border: solid black 1px; */
+	margin: 15px 15px 15px 15px;
+	padding: 5px 10px 10px 10px;
 	box-shadow: 3px 3px 10px #b7b7b7;
+}
+
+.titreFiltre{
+	text-align: center;
+	margin-top: 0px;
+	margin-right: auto;
+	margin-bottom: 0px;
+	margin-left: auto;
+	font-weight: bold;
+	font-size:1.3em;
+	cursor:pointer;
+	width: 80%;
+}
+
+.repli,.depli{
+	position: absolute;
+	top: 5px;
+	left: 5px;
+	cursor: pointer;
+	width: 23px;
+	height: 21px;
+	text-align: center;
+	border: 1px black solid;
+	border-radius: 20px;
+	font-weight: bold;
+	background:#fff;
+	box-shadow: 2px 2px 2x #b7b7b7;
+}
+
+.repli:hover,.depli:hover{
+	text-shadow: 1px 1px 1px #9e9e9e;
+	box-shadow: 2px 2px 5px #b7b7b7;
+	background:#fef;
+}
+
+.supFiltre{
+	position:absolute;
+	top:0px;
+	right:0px;
+	padding:9px;
+	width: 30px;
+	height: 30px;
+	cursor: pointer;
+	text-align: right;
+}
+
+.supFiltre:hover{
+	text-shadow: 2px 2px 1px #9e9e9e;
+}
+
+.etOu{
+	margin:18px 2px 5px -4px;
 }
 
 .lineCondi input[type=text]{
@@ -56,19 +99,6 @@
 	cursor:poiter;
 }
 
-.supFiltre{
-	position:absolute;
-	top:2px;
-	right:2px;
-	width: 30px;
-	height: 30px;
-	cursor: pointer;
-	text-align: right;
-}
-
-.supFiltre:hover{
-	text-shadow: 2px 2px 1px #9e9e9e;
-}
 
 #ajout_filtre{
 	margin-top:0px;
