--- a/option.css
+++ b/option.css
@@ -1,3 +1,7 @@
+button{
+	cursor:pointer;
+}
+
 #filtres{
 	
 }
@@ -120,21 +124,12 @@
 }
 
 
-/* #ajout_filtre{ */
-	/* margin-top:0px; */
-	/* margin-bottom: 10px; */
-	/* text-align: center; */
-	/* cursor:pointer; */
-/* } */
-
-
 #ajout_filtre{
 	color:white;
 	box-shadow: grey 3px 3px 3px;
-	margin: 10px 45px 0px 0px;
+	margin: 10px 15px 0px 0px;
 	background:#0c8669;
 	height: 34px;
-	/* width: 66px; */
 	font-size: 23px;
 	cursor:pointer;
 }
@@ -244,3 +239,57 @@
 	border: solid black 1px;
 }
 
+#export{
+	/* color:white; */
+	box-shadow: grey 3px 3px 3px;
+	margin: 10px 10px 0px 0px;
+	/* background:#B60000; */
+	height: 34px;
+	font-size: 23px;
+}
+
+#impExp{
+	position : relative;
+	margin: auto;
+	margin-top:10px;
+	width:90%;
+	/* height:400px; */
+	background:white;
+	border-radius:10px;
+	box-shadow: black 2px 2px 30px;
+	padding: 10px;
+	text-align:center;
+	display:none;
+}
+
+.titre{
+	text-align:center;
+	font-size: 23px;
+	margin-bottom:15px;
+	font-weight:bold;
+}
+
+#fermerImport{
+	position:absolute;
+	top:0px;
+	right:19px;
+	padding:9px;
+	width: 30px;
+	height: 30px;
+	cursor: pointer;
+	text-align: right;
+}
+
+#textToImp{
+	width: 100%;
+	height:280px;
+}
+
+#import	{
+	color:white;
+	box-shadow: grey 3px 3px 3px;
+	margin: 10px 45px 0px 0px;
+	background:#0c8669;
+	height: 34px;
+	font-size: 23px;
+}
