retrait alert et prompt suit MAJ ajout d'un input pour les titres

--- a/option.css
+++ b/option.css
@@ -53,6 +53,10 @@ button{
 	text-decoration:underline;
 }
 
+.inputTitre{
+	text-align: center;
+}
+
 .repli,.depli{
 	position: absolute;
 	top: 5px;
